# Morpheus

./: .gitignore  ARCHITECTURE.md  CGROUP_THROTTLING_DESIGN.md  CONTRIBUTING.md  Cargo.toml  NON_GOALS.md  OPERATOR.md  README.md  TROUBLESHOOTING.md  TUNING.md  WALKTHROUGH.md  benchmark.md
.github/workflows/: ci.yml
morpheus-bench/: Cargo.toml
morpheus-bench/benches/: checkpoint.rs
morpheus-common/: Cargo.toml
morpheus-common/include/: morpheus_shared.h
morpheus-common/src/: lib.rs
morpheus-py/: Cargo.toml  README.md  benchmark.md  pyproject.toml
morpheus-py/bench/: analyze.py  benchmark.py  run.sh  setup_and_bench.sh
morpheus-py/bench/data/: blocking_w1.json  blocking_w2.json  blocking_w4.json  blocking_w8.json  morpheus_w1.json  morpheus_w2.json  morpheus_w4.json  morpheus_w8.json  naive_w1.json  naive_w2.json  naive_w4.json  naive_w8.json
morpheus-py/examples/: asyncio_example.py  celery_worker.py  django_middleware.py  fastapi_app.py  flask_app.py
morpheus-py/morpheus_common/: __init__.py  _morpheus_shared.py
morpheus-py/python/: __init__.py  morpheus_asyncio.py
morpheus-py/python/morpheus/: __init__.py  asyncio.py  run.py
morpheus-py/src/: lib.rs
morpheus-py/tests/: test_bindings.py
morpheus-runtime/: Cargo.toml
morpheus-runtime/src/: adapter.rs  bpf_maps.rs  critical.rs  error.rs  executor.rs  lib.rs  metrics.rs  ringbuf.rs  runtime.rs  scb.rs  worker.rs
morpheus-runtime/tests/: e2e_kernel.rs  integration.rs
morpheus-tokio/: Cargo.toml
morpheus-tokio/src/: lib.rs
scripts/: run_adversarial.sh  run_benchmarks.sh  run_microbench.sh  unsafe_audit.sh  validate_benchmarks.py
scx_morpheus/: Cargo.toml  build.rs
scx_morpheus/src/: main.rs
scx_morpheus/src/bpf/: compat.bpf.h  scx_morpheus.bpf.c  vmlinux.h
