# SPDX-License-Identifier: GPL-2.0-only
# Copyright (C) 2024 Ankit Kumar Pandey <ankitkpandey1@gmail.com>

[package]
name = "morpheus-py"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Python bindings for Morpheus-Hybrid cooperative async runtime"

[lib]
name = "morpheus"
crate-type = ["cdylib"]

# Maturin configuration
[package.metadata.maturin]
python-source = "python"

[dependencies]
morpheus-common = { workspace = true }
morpheus-runtime = { path = "../morpheus-runtime" }
pyo3 = { workspace = true }
tracing = { workspace = true }
