[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "morpheus-hybrid"
version = "0.1.0"
description = "Kernel-guided cooperative async runtime with opt-in escalation"
readme = "README.md"
license = {text = "GPL-2.0"}
authors = [
    {name = "Ankit Pandey"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: System :: Operating System Kernels :: Linux",
]
keywords = ["async", "scheduler", "sched_ext", "bpf", "kernel"]

[project.urls]
Homepage = "https://github.com/ankitkpandey1/Morpheus"
Repository = "https://github.com/ankitkpandey1/Morpheus"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "_morpheus"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
